adjusted css to account for spacing issue caused by adding theme dropdown

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -8,7 +8,6 @@
 
 .menuItems {
   font-size: 20px;
-  margin-right: -6rem;
   align-items: center;
 }
 
